feature: extract WeaverUtil + simplify the AP